kyy-k8s-config/examples/example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: example-ingress-nginx
  name: example-ingress-nginx
spec:
  rules:
    - host: "*.kaoyaya.com" # https 必须指定域名
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /nginx/
    - http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /nginx/
